@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2021-2024 Michael Clarke
+ * Copyright (C) 2021-2025 Michael Clarke
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -72,47 +72,53 @@ public abstract class DiscussionAwarePullRequestDecorator<C, P, U, D, N> impleme
         C client = createClient(almSettingDto, projectAlmSettingDto);
         
         P pullRequest = getPullRequest(client, almSettingDto, projectAlmSettingDto, analysis);
-        U user = getCurrentUser(client);
-        List<PostAnalysisIssueVisitor.ComponentIssue> openSonarqubeIssues = analysis.getScmReportableIssues();
 
-        List<Triple<D, N, Optional<ProjectIssueIdentifier>>> currentProjectSonarqubeComments = findOpenSonarqubeComments(client,
-                pullRequest,
-                user)
-                .stream()
-                .filter(comment -> !projectAlmSettingDto.getMonorepo() || isCommentFromCurrentProject(comment, analysis.getAnalysisProjectKey()))
-                .collect(Collectors.toList());
+        if (isInlineCommentsEnabled(projectAlmSettingDto)) {
+            U user = getCurrentUser(client);
 
-        List<String> commentKeysForOpenComments = closeOldDiscussionsAndExtractRemainingKeys(client,
-                user,
-                currentProjectSonarqubeComments,
-                openSonarqubeIssues,
-                pullRequest);
+            List<PostAnalysisIssueVisitor.ComponentIssue> openSonarqubeIssues = analysis.getScmReportableIssues();
 
-        List<String> commitIds = getCommitIdsForPullRequest(client, pullRequest);
-        List<Pair<PostAnalysisIssueVisitor.ComponentIssue, String>> uncommentedIssues = findIssuesWithoutComments(openSonarqubeIssues,
-                commentKeysForOpenComments)
-                .stream()
-                .map(DiscussionAwarePullRequestDecorator::loadScmPathsForIssues)
-                .filter(Optional::isPresent)
-                .map(Optional::get)
-                .filter(issue -> isIssueFromCommitInCurrentRequest(issue.getLeft(), commitIds, scmInfoRepository))
-                .collect(Collectors.toList());
+            List<Triple<D, N, Optional<ProjectIssueIdentifier>>> currentProjectSonarqubeComments = findOpenSonarqubeComments(client,
+                    pullRequest,
+                    user)
+                    .stream()
+                    .filter(comment -> !projectAlmSettingDto.getMonorepo() || isCommentFromCurrentProject(comment, analysis.getAnalysisProjectKey()))
+                    .toList();
 
-        uncommentedIssues.forEach(issue -> submitCommitNoteForIssue(client,
-                pullRequest,
-                issue.getLeft(),
-                issue.getRight(),
-                analysis,
-                reportGenerator.createAnalysisIssueSummary(issue.getLeft(), analysis)));
+            List<String> commentKeysForOpenComments = closeOldDiscussionsAndExtractRemainingKeys(client,
+                    user,
+                    currentProjectSonarqubeComments,
+                    openSonarqubeIssues,
+                    pullRequest);
+
+            List<String> commitIds = getCommitIdsForPullRequest(client, pullRequest);
+            List<Pair<PostAnalysisIssueVisitor.ComponentIssue, String>> uncommentedIssues = findIssuesWithoutComments(openSonarqubeIssues,
+                    commentKeysForOpenComments)
+                    .stream()
+                    .map(DiscussionAwarePullRequestDecorator::loadScmPathsForIssues)
+                    .filter(Optional::isPresent)
+                    .map(Optional::get)
+                    .filter(issue -> isIssueFromCommitInCurrentRequest(issue.getLeft(), commitIds, scmInfoRepository))
+                    .toList();
+
+            uncommentedIssues.forEach(issue -> submitCommitNoteForIssue(client,
+                    pullRequest,
+                    issue.getLeft(),
+                    issue.getRight(),
+                    analysis,
+                    reportGenerator.createAnalysisIssueSummary(issue.getLeft(), analysis)));
+        }
 
         AnalysisSummary analysisSummary = reportGenerator.createAnalysisSummary(analysis);
         submitSummaryNote(client, pullRequest, analysis, analysisSummary);
-        submitPipelineStatus(client, pullRequest, analysis, analysisSummary);
+        submitPipelineStatus(client, pullRequest, analysis, analysisSummary, projectAlmSettingDto);
 
         DecorationResult.Builder builder = DecorationResult.builder();
         createFrontEndUrl(pullRequest, analysis).ifPresent(builder::withPullRequestUrl);
         return builder.build();
     }
+
+    protected abstract boolean isInlineCommentsEnabled(ProjectAlmSettingDto projectAlmSettingDto);
 
     protected abstract C createClient(AlmSettingDto almSettingDto, ProjectAlmSettingDto projectAlmSettingDto);
 
@@ -124,7 +130,7 @@ public abstract class DiscussionAwarePullRequestDecorator<C, P, U, D, N> impleme
 
     protected abstract List<String> getCommitIdsForPullRequest(C client, P pullRequest);
 
-    protected abstract void submitPipelineStatus(C client, P pullRequest, AnalysisDetails analysis, AnalysisSummary analysisSummary);
+    protected abstract void submitPipelineStatus(C client, P pullRequest, AnalysisDetails analysis, AnalysisSummary analysisSummary, ProjectAlmSettingDto projectAlmSettingDto);
 
     protected abstract void submitCommitNoteForIssue(C client, P pullRequest, PostAnalysisIssueVisitor.ComponentIssue issue, String filePath,
                                                      AnalysisDetails analysis, AnalysisIssueSummary analysisIssueSummary);
@@ -154,7 +160,7 @@ public abstract class DiscussionAwarePullRequestDecorator<C, P, U, D, N> impleme
         return openSonarqubeIssues.stream()
                 .filter(issue -> !openGitlabIssueIdentifiers.contains(issue.getIssue().key()))
                 .filter(issue -> issue.getIssue().getLine() != null)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static Optional<Pair<PostAnalysisIssueVisitor.ComponentIssue, String>> loadScmPathsForIssues(PostAnalysisIssueVisitor.ComponentIssue componentIssue) {
@@ -206,7 +212,7 @@ public abstract class DiscussionAwarePullRequestDecorator<C, P, U, D, N> impleme
                                                                     P pullRequest) {
         List<String> openIssueKeys = openIssues.stream()
                 .map(issue -> issue.getIssue().key())
-                .collect(Collectors.toList());
+                .toList();
 
         List<String> remainingCommentKeys = new ArrayList<>();
 
